# flask-rls

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/superpowers/specs/: 2026-07-18-flask-rls-design.md
documentation/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/docs/: api-reference.md  installation.md  intro.md  quick-start.md
documentation/docs/examples/: expression-policy.md  tenant-based.md  user-based.md
documentation/docs/guides/: alembic.md  configuration.md  context.md  policies.md  testing.md
documentation/src/components/HomepageFeatures/: index.js  styles.module.css
documentation/src/css/: custom.css
documentation/src/pages/: index.js  index.module.css
documentation/static/: CNAME  robots.txt
flask_rls/: __init__.py  alembic.py  cli.py  context.py  exceptions.py  extension.py  policies.py  registry.py  sql.py  validation.py
tests/: test_alembic.py  test_cli.py  test_context.py  test_extension.py  test_policies.py  test_sql.py  test_validation.py
tests/integration/: conftest.py  test_isolation.py
